--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,7 +1,9 @@
+@import "../../Global.scss";
+
 .header{
     width: 100%;
     height: 70px;
-    background-color: lightsalmon;
+    background-color: $mainColor;
     position: fixed;
     top: 0;
     z-index: 2;
