--- a/src/Components/Intro/Intro.scss
+++ b/src/Components/Intro/Intro.scss
@@ -1,3 +1,24 @@
 .intro{
-    background-color: lightgrey;
+    background-color: white;
+    display: flex;
+
+    .left{
+        flex: .5;
+        background-color: yellow;
+        overflow: hidden;
+
+        .imageContainer{
+            width: 700px;
+            height: 700px;
+            
+
+            img{
+                height: 90%;
+            }
+        }
+    }
+    .right{
+        flex: .5;
+        background-color: red;
+    }
 }
