--- a/src/Components/Intro/Intro.scss
+++ b/src/Components/Intro/Intro.scss
@@ -4,7 +4,7 @@
 
     .left{
         flex: .5;
-        background-color: yellow;
+        background-color: #C2C2C2;
         overflow: hidden;
 
         .imageContainer{
@@ -13,12 +13,66 @@
             
 
             img{
-                height: 90%;
+                height: 100%;
             }
         }
     }
     .right{
         flex: .5;
-        background-color: red;
+        background-color: #C2C2C2;
+        position: relative;
+
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1{
+                font-size: 60px;
+                margin: 10px 0;
+            }
+
+            h2{
+                font-size: 35px;
+            }
+
+            h3{
+                font-size: 30px;
+
+                span{
+                    font-size: inherit;
+                    color: crimson;
+                }
+                .ityped-cursor{
+                    animation: blink 1s infinite;
+                }
+                @keyframes blink {
+                    50%{
+                        opacity: 1;
+                    }
+                    100%{
+                        opacity: 0;
+                    }
+                }
+            }
+        }
+        a{
+            position: absolute;
+            bottom: 10px;
+            left: 40%;
+            
+            img{
+                width: 30px;
+                animation: arrowBlink 2s infinite;
+            }
+            @keyframes arrowBlink {
+                100%{
+                    opacity: 0;
+                }
+            }
+        }
     }
 }
