--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -47,6 +47,8 @@
             justify-content: center;
             color: white;
             position: relative;
+            transition: all .5s ease;
+            cursor: pointer;
 
             img{
                 width: 100%;
@@ -62,6 +64,10 @@
 
             &:hover{
                 background-color: $mainColor;
+                img{
+                    opacity: 0.2;
+                    z-index: 0;
+                }
                 
             }
         }
