--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -8,6 +8,10 @@
 
     h1{
         font-size: 50px;
+
+        @include mobile {
+            font-size: 20px;
+        }
     }
 
     ul{
@@ -15,6 +19,12 @@
         padding: 0;
         list-style: none;
         display: flex;
+
+        @include mobile {
+            margin: 10px 0;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
 
         li{
             font-size: 14px;
@@ -36,6 +46,10 @@
         justify-content: center;
         flex-wrap: wrap;
 
+        @include mobile {
+            width: 100%;
+        }
+
         .item{
             width: 220px;
             height: 150px;
@@ -49,6 +63,11 @@
             position: relative;
             transition: all .5s ease;
             cursor: pointer;
+
+            @include mobile {
+                width: 130px;
+                height: 100px;
+            }
 
             img{
                 width: 100%;
