--- a/src/Components/Works/Works.scss
+++ b/src/Components/Works/Works.scss
@@ -1,3 +1,5 @@
+@import "../../Global.scss";
+
 .works {
     background-color: crimson;
     display: flex;
@@ -9,6 +11,10 @@
         height: 50px;
         position: absolute;
         cursor: pointer;
+
+        @include mobile {
+            display: none;
+        }
 
         &.left {
             left: 100px;
@@ -27,6 +33,12 @@
         left: 0;
         transition: all 1s ease-out;
 
+        @include mobile {
+            height: 100vh;
+            flex-direction: column;
+            justify-content: center;
+        }
+
         .container {
             width: 100vw;
             display: flex;
@@ -39,6 +51,13 @@
                 display: flex;
                 background-color: white;
                 border-radius: 20px;
+
+                @include mobile {
+                    width: 90%;
+                    height: 150px;
+                    margin: 5px 0;
+                    
+                }
 
                 .left {
                     flex: 4;
