--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -1,11 +1,21 @@
+@import "../../Global.scss";
+
 .testimonials {
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    @include mobile {
+        justify-content: space-around; 
+    }
+
     h1 {
         font-size: 50px;
+
+        @include mobile {
+            font-size: 20px;
+        }
     }
 
     .container {
@@ -14,6 +24,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        @include mobile {
+            flex-direction: column;
+            height: 100%;
+        }
 
         .card {
             width: 250px;
@@ -26,10 +41,21 @@
             padding: 20px;
             transition: all 1s ease;
 
+            @include mobile {
+                height: 180px;
+                margin: 10px 0;
+            }
+
             &.featured{
                 widows: 300px;
                 height: 75%;
                 margin: 0 30px;
+
+                @include mobile {
+                    height: 200px;
+                    width: 250;
+                    margin: 1px;
+                }
             }
 
             &:hover{
@@ -45,6 +71,10 @@
                     &.left,
                     &.right {
                         height: 25px;
+
+                        @include mobile {
+                            height: 15px; 
+                        }
                     }
                     &.user {
                         height: 60px;
@@ -53,6 +83,11 @@
                         object-fit: cover;
                         margin: 0 30px;
                         background-color: lightgrey;
+
+                        @include mobile {
+                            height: 40px;
+                            width: 40px;
+                        }
                     }
                 }
             }
@@ -60,6 +95,11 @@
                 padding: 10px;
                 border-radius: 10px;
                 background-color: rgb(212, 201, 203);
+
+                @include mobile {
+                    font-size: 12px;
+                    padding: 5px;
+                }
             }
             .bottom {
                 display: flex;
@@ -69,9 +109,17 @@
 
                 h3 {
                     margin-bottom: 5px;
+
+                    @include mobile {
+                        font-size: 14px;
+                    }
                 }
                 h4 {
                     color: gray;
+
+                    @include mobile {
+                        font-size: 13px;
+                    }
                 }
             }
         }
