--- a/src/Components/Works/Works.scss
+++ b/src/Components/Works/Works.scss
@@ -53,9 +53,9 @@
                 border-radius: 20px;
 
                 @include mobile {
-                    width: 90%;
+                    width: 80%;
                     height: 150px;
-                    margin: 5px 0;
+                    margin: 15px 0;
                     
                 }
 
@@ -73,6 +73,11 @@
                         flex-direction: column;
                         justify-content: space-between;
 
+                        @include mobile {
+                            width: 80%;
+                            height: 80%;
+                        }
+
                         .imgContainer {
                             width: 40px;
                             height: 40px;
@@ -82,15 +87,32 @@
                             align-items: center;
                             justify-content: center;
 
+                            @include mobile {
+                                width: 20px;
+                                height: 20px;
+                            }
+
                             img {
                                 width: 25px;
+
+                                @include mobile {
+                                    width: 15px;
+                                }
                             }
                         }
                         h2 {
                             font-size: 20px;
+
+                            @include mobile {
+                                font-size: 13px;
+                            }
                         }
                         p {
                             font-size: 13px;
+
+                            @include mobile {
+                                display: none;
+                            }
                         }
                         span {
                             font-size: 12px;
