--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -33,6 +33,14 @@
                 align-items: center;
                 margin-left: 30px;
 
+                a {
+                    display: flex;
+                    align-items: center;
+                    text-decoration: none;
+                    color: inherit;
+
+                }
+
                 @include mobile {
                     display: none;
                 }
