new contact me section refactured

--- a/src/Components/Intro/Intro.scss
+++ b/src/Components/Intro/Intro.scss
@@ -110,6 +110,7 @@
             @keyframes arrowBlink {
                 100%{
                     opacity: 0;
+                    margin-bottom: 60px;
                 }
             }
         }
