refactoring portfolio section

--- a/src/Components/ContactMe/ContactMe.scss
+++ b/src/Components/ContactMe/ContactMe.scss
@@ -9,7 +9,7 @@
 .contactMe-bg {
     width: 20px;
     height: 100%;
-    background-color: green;
+    background-color:$mainColor;
     position: absolute;
 }
 
